--- a/.github/workflows/slack-notify.yaml
+++ b/.github/workflows/slack-notify.yaml
@@ -32,6 +32,7 @@ jobs:
               "channel": "${{ inputs.channel }}",
               "attachments": [
                 {
+                  "color": "${{ inputs.color }}"
                   "text": "${{ inputs.message }}"
                 }
               ]
