--- a/.github/workflows/manual-test.yaml
+++ b/.github/workflows/manual-test.yaml
@@ -3,9 +3,9 @@ name: Manual Test
 on:
   workflow_dispatch:
     inputs:
-      sha:
+      ref:
         type: string
-        description: The commit SHA to checkout
+        description: The ref or commit SHA to checkout
         required: true
         default: main
       notify:
@@ -22,21 +22,30 @@ on:
         type: string
 
 jobs:
+  Resolve-Ref-Sha:
+    runs-on: ubuntu-latest
+    outputs:
+      sha: ${{ steps.resolve.outputs.sha }}
+    steps:
+      - name: Resolve Ref
+        id: resolve
+        run: echo "git rev-parse ${{ inputs.ref }}" >> "$GITHUB_OUTPUT"
   Checkout:
+    needs: Resolve-Ref-Sha
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
         with:
-          ref: ${{ inputs.sha }}
+          ref: ${{ needs.Resolve-Ref-Sha.outputs.sha }}
   Notify:
-    needs: Checkout
+    needs: [Checkout, Resolve-Ref-Sha]
     if: ${{ inputs.notify == true }}
     uses: ./.github/workflows/slack-notify.yaml
     with:
       channel: ${{ inputs.channel }}
-      message: ${{ inputs.message }}
+      message: ${{ needs.Resolve-Ref-Sha.outputs.sha }}
       color: ${{ inputs.color }}
     secrets:
       slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
