--- a/.github/workflows/manual-test.yaml
+++ b/.github/workflows/manual-test.yaml
@@ -6,8 +6,7 @@ on:
       ref:
         type: string
         description: The ref or commit SHA to checkout
-        required: true
-        default: main
+        required: false
       notify:
         type: boolean
         description: Should notify Slack?
