--- a/.github/workflows/manual-test.yaml
+++ b/.github/workflows/manual-test.yaml
@@ -24,6 +24,13 @@ jobs:
   #     - name: Resolve Ref
   #       id: resolve
   #       run: echo "$(git rev-parse ${{ inputs.ref }})" >> "$GITHUB_OUTPUT"
+  Echo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo
+        run: |
+          echo "github.sha ${{ github.sha }}"
+          echo "github.workflow_sha ${{ github.workflow_sha }}"
   Checkout:
     runs-on: ubuntu-latest
     timeout-minutes: 15
