--- a/.github/workflows/manual-test.yaml
+++ b/.github/workflows/manual-test.yaml
@@ -47,7 +47,7 @@ jobs:
           ref: ${{ inputs.ref || github.sha }}
   Notify:
     needs: Echo
-    if: ${{ inputs.notify == true }}
+    if: ${{ always() && inputs.notify == true }}
     uses: ./.github/workflows/slack-notify.yaml
     with:
       channel: feed-slack-webhook-test
