--- a/.github/workflows/manual-tag.yaml
+++ b/.github/workflows/manual-tag.yaml
@@ -3,29 +3,26 @@ name: Manual Tag
 on:
   workflow_dispatch:
     inputs:
-      ref:
-        type: string
+      commit_sha:
+        description: 'The commit SHA to tag'
         required: true
-      name:
-        type: string
+        default: ''
+      tag_name:
+        description: 'The tag name to create'
         required: true
+        default: ''
 
 jobs:
-  Checkout:
+  tag:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-        with:
-          ref: ${{ github.sha }}
-  Tag:
-    needs: Checkout
-    runs-on: ubuntu-latest
-    steps:
-      - name: Tag
-        run: |
-          echo "github actor 1 ${{ github.actor }}"
-          echo "github actor 2 ${GITHUB_ACTOR}"
-          git tag ${{ inputs.name }} -f ${{ inputs.ref }}
-          git push origin ${{ inputs.name }} -f
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Force push tag
+      run: |
+        git tag -f ${{ github.event.inputs.tag_name }} ${{ github.event.inputs.commit_sha }}
+        git push origin ${{ github.event.inputs.tag_name }} --force
+      # env:
+      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
