--- a/.github/workflows/manual-tag.yaml
+++ b/.github/workflows/manual-tag.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.inputs.commit_sha }}
 
     - name: Force push tag
       run: |
